--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <div class="team-member d-flex align-items-start">
-                <div class="pic"><a href="https://javerdomaraya.github.io/urbanThread-Clothing/
-                  "><img src="assets/img/team/person1.png" class="img-fluid" alt=""></a></div>
+                <div class="pic"><a href="https://javerdomaraya.github.io/urbanThread-Clothing/"><img src="assets/img/team/person1.png" class="img-fluid" alt=""></a></div>
                 <div class="member-info">
                   <h4>Javer Domaraya</h4>
                   <span>Game Developer</span>
