--- a/index.html
+++ b/index.html
@@ -266,8 +266,7 @@
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
               <div class="team-member d-flex align-items-start">
-                <div class="pic"><a href="https://mazurca-cute.github.io/rabbitShop-forLoyal/html/index.html
-                  "><img src="assets/img/team/person3.png" class="img-fluid" alt=""></a></div>
+                <div class="pic"><a href="https://comagent.github.io/stephen-bunny/html/index.html"><img src="assets/img/team/person3.png" class="img-fluid" alt=""></a></div>
                 <div class="member-info">
                   <h4>Stephen Mazurca</h4>
                   <span>Graphics Design</span>
